[package]
name = "rustris"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
js-sys = "0.3.59"
rand = "0.8.5"
wasm-bindgen = "0.2.82"
wasm-react = "0.3.2"
web-sys = { version = "0.3.59", features = ["Window", "HtmlElement"] }
